# hdl

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: args.rs  config.rs  main.rs  progress.rs  request.rs
src/downloaders/: ehentai.rs  imhentai.rs  mod.rs  nhentai.rs
src/downloaders/utils/: common_url_pattern_donwloader.rs  mod.rs
